fixing nav bar for mobile.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <div class="navbar-fixed">
         <nav>
             <div id="navbar" class="nav-wrapper">
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="nav-color" href="#header">Contact</a></li>
-                    <li><a class="nav-color" href="#skills">Skills</a></li>
-                    <li><a class="nav-color" href="#card1">Portfolio</a></li>
-                    <li><a class="nav-color" href="#about-me">About Me</a></li>
+                <ul id="nav-mobile" class="right">
+                    <li><a id="nav-links" class="nav-color" href="#header">Contact</a></li>
+                    <li><a  id="nav-links" class="nav-color" href="#skills">Skills</a></li>
+                    <li><a  id="nav-links" class="nav-color" href="#card1">Portfolio</a></li>
+                    <li><a id="nav-links" class="nav-color" href="#about-me">About Me</a></li>
                 </ul>
             </div>
         </nav>
