Some slight changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="header" class="section scrollspy">
         <img id="picture" src="./assets/mecropped.jpg" alt="me">
         <h2 id="title">Full Stack Web Developer</h2>
-        <p>Welcome, my name's Austin I am skilled in Full Stack Web Development, with a passion for back-end development.</p>
+        <p>Welcome, my name is Austin. I am skilled in Full Stack Web Development using technologies like MongoDB, Express, React, and Node.js, with a passion for functionality and back-end web development.</p>
         <br>
         <a href="mailto:auztin410@gmail.com"><span id="email" class="pulse">Email<i class="fas fa-envelope"></i></span></a>
         <a href="https://www.linkedin.com/in/austin-saflarske-24a12087/" target="_blank"><span id="linkedin" class="pulse">Linked<i
